# tesseract-sys

./: .gitmodules  Cargo.toml  README.md  build.rs  custom_capi.cpp  custom_capi.h  wrapper_capi.h
